slight css changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- <meta charset="UTF-8" /> -->
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Benevolo</title>
+  <link rel="icon" type="image/png" href="/frontend/logo/Benevolo.png" sizes="8x8" />
+  <link rel="icon" type="image/x-icon" href="/frontend/logo/favicon.ico" />
 </head>
 
 <body>
